we'd like to skip running CI on draft PRs that's why if: github.event.pull_request.draft == false condition was added to each job in workflows triggered on PR

--- a/.github/workflows/Julia.yml
+++ b/.github/workflows/Julia.yml
@@ -38,6 +38,7 @@ concurrency:
 jobs:
   format_check:
     name: Julia Format Check
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -58,6 +59,7 @@ jobs:
 
   main_julia:
     name: Julia ${{ matrix.version }}
+    if: github.event.pull_request.draft == false
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
