--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -60,6 +60,7 @@ jobs:
  win-release-64:
     # Builds binaries for windows_amd64
     name: Windows (64 Bit)
+    if: github.event.pull_request.draft == false
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
@@ -149,7 +150,7 @@ jobs:
 
  win-release-32:
     name: Windows (32 Bit)
-    if: github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true'
+    if: github.event.pull_request.draft == false && (github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true')
     runs-on: windows-latest
     needs: win-release-64
 
@@ -189,7 +190,7 @@ jobs:
 
  win-release-arm64:
    name: Windows (ARM64)
-   if: github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true'
+   if: github.event.pull_request.draft == false && (github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true')
    runs-on: windows-latest
    needs: win-release-64
 
@@ -253,6 +254,7 @@ jobs:
 
  mingw:
      name: MinGW (64 Bit)
+     if: github.event.pull_request.draft == false
      runs-on: windows-latest
      if: ${{ inputs.skip_tests != 'true' }}
      needs: win-release-64
@@ -299,6 +301,7 @@ jobs:
  win-extensions-64:
    # Builds extensions for windows_amd64
    name: Windows Extensions (64-bit)
+   if: github.event.pull_request.draft == false
    runs-on: windows-latest
    needs: win-release-64
    steps:
@@ -337,6 +340,7 @@ jobs:
 
  upload-windows_amd64-extensions:
     name: Upload windows_amd64 Extensions
+    if: github.event.pull_request.draft == false
     needs: win-extensions-64
     uses: ./.github/workflows/_sign_deploy_extensions.yml
     secrets: inherit
@@ -347,6 +351,7 @@ jobs:
 
  win-packaged-upload:
    runs-on: windows-latest
+   if: github.event.pull_request.draft == false
    needs:
      - win-release-64
      - win-release-arm64
