--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -54,6 +54,7 @@ env:
 jobs:
  linux-release-cli:
     needs: linux-extensions-64
+    if: github.event.pull_request.draft == false
 
     strategy:
       fail-fast: false
@@ -144,6 +145,7 @@ jobs:
  linux-extensions-64:
     # Builds extensions for linux_amd64
     name: Linux Extensions (x64)
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -175,6 +177,7 @@ jobs:
 
  upload-linux-extensions-64:
     name: Upload Linux Extensions (x64)
+    if: github.event.pull_request.draft == false
     needs: linux-extensions-64
     strategy:
       matrix:
@@ -189,6 +192,7 @@ jobs:
  linux-extensions-64-musl:
     # Builds extensions for linux_amd64_musl
     name: Linux Extensions (musl + x64)
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     needs: linux-extensions-64
     strategy:
@@ -220,6 +224,7 @@ jobs:
 
  upload-linux-extensions-64-musl:
     name: Upload Linux Extensions (musl + x64)
+    if: github.event.pull_request.draft == false
     needs: linux-extensions-64-musl
     strategy:
       matrix:
@@ -234,6 +239,7 @@ jobs:
  linux-extensions-64-aarch64:
     # Builds extensions for linux_arm64
     name: Linux Extensions (aarch64)
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-24.04-arm
     needs: linux-extensions-64
     strategy:
@@ -264,6 +270,7 @@ jobs:
  
  upload-linux-extensions-64-aarch64:
     name: Upload Linux Extensions (aarch64)
+    if: github.event.pull_request.draft == false
     needs: linux-extensions-64-aarch64
     strategy:
       matrix:
@@ -277,7 +284,7 @@ jobs:
           
  check-load-install-extensions:
     name: Checks extension entries
-    if: ${{ inputs.skip_tests != 'true' }}
+    if: github.event.pull_request.draft == false && inputs.skip_tests != 'true'
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     env:
@@ -348,7 +355,7 @@ jobs:
 
  symbol-leakage:
     name: Symbol Leakage
-    if: ${{ inputs.skip_tests != 'true' }}
+    if: github.event.pull_request.draft == false && inputs.skip_tests != 'true'
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
 
@@ -378,6 +385,7 @@ jobs:
 
  linux-httpfs:
     name: Linux HTTPFS
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     env:
