--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -54,7 +54,7 @@ env:
 jobs:
  linux-release-cli:
     needs: linux-extensions-64
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
 
     strategy:
       fail-fast: false
@@ -145,7 +145,7 @@ jobs:
  linux-extensions-64:
     # Builds extensions for linux_amd64
     name: Linux Extensions (x64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -177,7 +177,7 @@ jobs:
 
  upload-linux-extensions-64:
     name: Upload Linux Extensions (x64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64
     strategy:
       matrix:
@@ -192,7 +192,7 @@ jobs:
  linux-extensions-64-musl:
     # Builds extensions for linux_amd64_musl
     name: Linux Extensions (musl + x64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     needs: linux-extensions-64
     strategy:
@@ -224,7 +224,7 @@ jobs:
 
  upload-linux-extensions-64-musl:
     name: Upload Linux Extensions (musl + x64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64-musl
     strategy:
       matrix:
@@ -239,7 +239,7 @@ jobs:
  linux-extensions-64-aarch64:
     # Builds extensions for linux_arm64
     name: Linux Extensions (aarch64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04-arm
     needs: linux-extensions-64
     strategy:
@@ -270,7 +270,7 @@ jobs:
  
  upload-linux-extensions-64-aarch64:
     name: Upload Linux Extensions (aarch64)
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64-aarch64
     strategy:
       matrix:
@@ -284,7 +284,7 @@ jobs:
           
  check-load-install-extensions:
     name: Checks extension entries
-    if: github.event.pull_request.draft == false && inputs.skip_tests != 'true'
+    if: ${{ github.event.pull_request.draft == false && inputs.skip_tests != 'true' }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     env:
@@ -355,7 +355,7 @@ jobs:
 
  symbol-leakage:
     name: Symbol Leakage
-    if: github.event.pull_request.draft == false && inputs.skip_tests != 'true'
+    if: ${{ github.event.pull_request.draft == false && inputs.skip_tests != 'true' }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
 
@@ -385,7 +385,7 @@ jobs:
 
  linux-httpfs:
     name: Linux HTTPFS
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     env:
