--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -31,7 +31,7 @@ env:
 jobs:
   linux-memory-leaks:
      name: Linux Memory Leaks
-     if: github.event.pull_request.draft == false
+     if: ${{ github.event.pull_request.draft == false }}
      runs-on: ubuntu-24.04
      env:
        GEN: ninja
@@ -66,7 +66,7 @@ jobs:
 
   release-assert:
     name: Release Assertions
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     needs: linux-memory-leaks
     env:
@@ -103,7 +103,7 @@ jobs:
 
   release-assert-osx:
     name: Release Assertions OSX
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: macos-latest
     needs: linux-memory-leaks
     env:
@@ -141,7 +141,7 @@ jobs:
 
   release-assert-osx-storage:
     name: Release Assertions OSX Storage
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: macos-latest
     needs: linux-memory-leaks
     env:
@@ -179,7 +179,7 @@ jobs:
 
   smaller-binary:
     name: Smaller Binary
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -216,7 +216,7 @@ jobs:
 
   release-assert-clang:
     name: Release Assertions with Clang
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     needs: linux-memory-leaks
     env:
@@ -257,7 +257,7 @@ jobs:
     name: Linux (32 Bit)
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2_28_x86_64
-    if: github.event.pull_request.draft == false && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature')
+    if: ${{ github.event.pull_request.draft == false && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature') }}
     needs: linux-memory-leaks
     env:
       CC: /usr/bin/gcc
@@ -286,7 +286,7 @@ jobs:
 
   linux-tarball:
      name: Python 3 Tarball
-     if: github.event.pull_request.draft == false
+     if: ${{ github.event.pull_request.draft == false }}
      runs-on: ubuntu-22.04
      needs: linux-memory-leaks
      steps:
@@ -326,7 +326,7 @@ jobs:
 
   python-sqllogic:
      name: Python SQLLogicTest Library (Linux)
-     if: github.event.pull_request.draft == false
+     if: ${{ github.event.pull_request.draft == false }}
      runs-on: ubuntu-22.04
      env:
         GEN: ninja
@@ -361,7 +361,7 @@ jobs:
 
   sqllogic:
      name: Sqllogic tests
-     if: github.event.pull_request.draft == false
+     if: ${{ github.event.pull_request.draft == false }}
      runs-on: ubuntu-latest # Secondary task of this CI job is to test building duckdb on latest ubuntu
      needs: linux-memory-leaks
 
@@ -387,7 +387,7 @@ jobs:
 
   storage-initialization:
      name: Storage Initialization Verification
-     if: github.event.pull_request.draft == false
+     if: ${{ github.event.pull_request.draft == false }}
      runs-on: ubuntu-22.04
      needs: linux-memory-leaks
      env:
@@ -420,7 +420,7 @@ jobs:
 
   extension-updating:
     name: Extension updating test
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
     needs: linux-memory-leaks
     env:
@@ -471,7 +471,7 @@ jobs:
 
   force-blocking-sink-source:
     name: Forcing async Sinks/Sources
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -504,7 +504,7 @@ jobs:
 
   regression-test-memory-safety:
    name: Regression Tests between safe and unsafe builds
-   if: github.event.pull_request.draft == false
+   if: ${{ github.event.pull_request.draft == false }}
    runs-on: ubuntu-22.04
    needs: linux-memory-leaks
    env:
@@ -586,7 +586,7 @@ jobs:
 
   block-sizes:
     name: Block Sizes
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
     env:
@@ -704,7 +704,7 @@ jobs:
 
   codecov:
     name: Code Coverage
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
     needs: linux-memory-leaks
     env:
@@ -748,4 +748,4 @@ jobs:
   pyodide:
     uses: ./.github/workflows/Pyodide.yml
     secrets: inherit
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
