--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -712,6 +712,13 @@
         ]
     },
     {
+        "name": "pin_threads",
+        "description": "Whether to pin threads to cores (Linux only, default AUTO: on when there are more than 64 cores)",
+        "type": "VARCHAR",
+        "return_type": "ThreadPinMode",
+        "scope": "global"
+    },
+    {
         "name": "pivot_filter_threshold",
         "description": "The threshold to switch from using filtered aggregates to LIST with a dedicated pivot operator",
         "type": "UBIGINT",
