--- a/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
+++ b/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
@@ -721,7 +721,7 @@ typedef struct _duckdb_arrow_array {
 	void *internal_ptr;
 } * duckdb_arrow_array;
 
-//! Holds an arrow array. Remember to release the respective ArrowArray object.
+//! The Client Properties
 typedef struct _duckdb_client_properties {
 	void *internal_ptr;
 } * duckdb_client_properties;
