--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -438,3 +438,54 @@ jobs:
         python3 scripts/get_test_list.py --file-contains 'require httpfs' --list '"*"' > test.list
         python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '-f test.list'
         python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '[secret]'
+
+ linux-configs:
+    name: Linux test configs
+    runs-on: ubuntu-24.04
+    # needs: linux-extensions-64
+    env:
+      CORE_EXTENSIONS: "json;parquet;tpch;tpcds"
+      GEN: ninja
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+
+    - name: Install Ninja
+      shell: bash
+      run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build
+
+    - name: Fix permissions of test secrets
+      shell: bash
+      run: chmod -R 700 data/secrets
+
+    # TODO: fix the authenticated proxy here
+    - name: Install and run http proxy squid
+      shell: bash
+      run: |
+        sudo apt-get install squid
+        ./scripts/run_squid.sh --port 3128 --log_dir squid_logs &
+
+    - name: Setup Ccache
+      uses: hendrikmuhs/ccache-action@main
+      with:
+        key: ${{ github.job }}
+        save: ${{ github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' }}
+
+    - name: Build
+      shell: bash
+      run: make
+
+    - name: Start test server & run tests
+      shell: bash
+      run: |
+        shopt -s nullglob
+        for file in test/configs/*; do
+          cat "$file"
+          time ./build/release/test/unittest --test-config "$file"
+        done
