--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -854,6 +854,12 @@
         ]
     },
     {
+        "name": "wal_encryption",
+        "description": "Encrypt the WAL if the database is encrypted",
+        "type": "BOOLEAN",
+        "scope": "global"
+    },
+    {
         "name": "zstd_min_string_length",
         "description": "The (average) length at which to enable ZSTD compression, defaults to 4096",
         "type": "UBIGINT",
