--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -314,7 +314,7 @@ jobs:
     with:
       runs_on: ${{ matrix.config.runs_on }}
       duckdb_arch: ${{ matrix.config.duckdb_arch }}
-      duckdb_binary: ${{ matrix.config.duckb_binary }}
+      duckdb_binary: ${{ matrix.config.duckdb_binary }}
       nightly_build: 'osx'
       branch: ${{ github.ref_name }}
 
