--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -359,7 +359,7 @@ jobs:
   with:
     runs_on: ${{ matrix.config.runs_on }}
     duckdb_arch: ${{ matrix.config.duckdb_arch }}
-    duckdb_binary: ${{ matrix.config.duckb_binary }}
+    duckdb_binary: ${{ matrix.config.duckdb_binary }}
     nightly_build: 'linux'
     branch: ${{ github.ref_name }}
 
