--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -442,7 +442,7 @@ jobs:
  linux-configs:
     name: Linux test configs
     runs-on: ubuntu-24.04
-    # needs: linux-extensions-64
+    needs: linux-extensions-64
     env:
       CORE_EXTENSIONS: "json;parquet;tpch;tpcds"
       GEN: ninja
@@ -460,17 +460,6 @@ jobs:
       shell: bash
       run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build
 
-    - name: Fix permissions of test secrets
-      shell: bash
-      run: chmod -R 700 data/secrets
-
-    # TODO: fix the authenticated proxy here
-    - name: Install and run http proxy squid
-      shell: bash
-      run: |
-        sudo apt-get install squid
-        ./scripts/run_squid.sh --port 3128 --log_dir squid_logs &
-
     - name: Setup Ccache
       uses: hendrikmuhs/ccache-action@main
       with:
@@ -481,7 +470,7 @@ jobs:
       shell: bash
       run: make
 
-    - name: Start test server & run tests
+    - name: Test available configurations
       shell: bash
       run: |
         shopt -s nullglob
