--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -31,6 +31,7 @@ on:
       - '.github/patches/duckdb-wasm/**'
       - '.github/workflows/**'
       - '!.github/workflows/LinuxRelease.yml'
+      - 'test-uploaded-ext'
   merge_group:
   pull_request:
     types: [opened, reopened, ready_for_review]
