--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -123,44 +123,6 @@ jobs:
       shell: bash
       run: make allunit
 
- force-restart:
-    name: Force Restart
-    if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-    runs-on: ubuntu-22.04
-    needs: force-storage
-    env:
-      CC: gcc-10
-      CXX: g++-10
-      GEN: ninja
-      BUILD_JEMALLOC: 1
-      CORE_EXTENSIONS: "icu;parquet;tpch;tpcds;json"
-      DUCKDB_TEST_DESCRIPTION: 'Tests run with --force-storage --force-restart'
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Install
-      shell: bash
-      run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build
-
-    - name: Setup Ccache
-      uses: hendrikmuhs/ccache-action@main
-      with:
-        key: ${{ github.job }}
-        save: ${{ github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' }}
-
-    - name: Build
-      shell: bash
-      run: make reldebug
-
-    - name: Output version info
-      shell: bash
-      run: ./build/reldebug/duckdb -c "PRAGMA version;"
-
-    - name: Test
-      shell: bash
-      run: build/reldebug/test/unittest --force-reload --force-storage
-
  no-string-inline:
     name: No String Inline / Destroy Unpinned Blocks
     runs-on: ubuntu-24.04
@@ -520,4 +482,9 @@ jobs:
        shell: bash
        run: |
         ./build/reldebug/test/unittest --test-config test/configs/force_storage.json
+
+    - name: test/configs/force_storage_restart.json
+       shell: bash
+       run: |
+        ./build/reldebug/test/unittest --test-config test/configs/force_storage_restart.json
 
