[CI] if: always()

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -348,61 +348,61 @@ jobs:
       run: make reldebug
 
     - name: test/configs/encrypted_db.json
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --test-config test/configs/encrypted_db.json
 
     - name: test/configs/force_storage.json
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --test-config test/configs/force_storage.json
 
     - name: test/configs/force_storage_restart.json
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --test-config test/configs/force_storage_restart.json
 
     - name: test/configs/latest_storage.json
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --test-config test/configs/latest_storage.json
 
     - name: test/configs/prefetch_all_parquet_files.json
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --test-config test/configs/prefetch_all_parquet_files.json
 
     - name: Test dictionary_expression
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --verify_vector=dictionary_expression --skip-compiled
 
     - name: Test dictionary_operator
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --verify_vector=dictionary_operator --skip-compiled
 
     - name: Test constant_operator
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --verify_vector=constant_operator --skip-compiled
 
     - name: Test sequence_operator
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --verify_vector=sequence_operator --skip-compiled
 
     - name: Test nested_shuffle
-      if: steps.build.conclusion == 'success'
+      if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/reldebug/test/unittest --verify_vector=nested_shuffle --skip-compiled
